# RayTracerKokkos

./: CMakeLists.txt  README.md
src/: BVH.hpp  circle.hpp  hit.hpp  main.cpp  material.hpp  point.hpp  random_scene.hpp  ray.hpp  sampler.hpp  triangle.hpp  window.hpp
